# 30122-project-women-in-stem

./: .gitignore  README.md  clean_region_data.csv  hello.py  pyproject.toml
archive/: cw_deaths.csv  cw_maternal_mortality.csv  cw_web_scraping.py  predict_train_test_split.py
data/: clean_reg_age_educ.csv  clean_regional.csv  example_csv_map.csv  health system performance for women.csv  merged_kff.csv  mortality_rate.csv
data/downloaded_data/: Regional_excel.csv  Regional_excel.xlsx  region_age_educ_race.csv
data/scrape_data/: abortion.csv  age.csv  deaths.csv  earnings.csv  kff_cesarean.csv  kff_cesarean_re.csv  kff_coverage.csv  kff_infant_mortality.csv  kff_infant_mortality_re.csv  kff_maternal_mortality.csv  kff_medicaid_expansion.csv  kff_postpartum_coverage.csv  kff_poverty.csv  kff_race.csv  kff_uninsured.csv  merged_data.csv  merged_kff.csv
milestones/: milestone1.md  milestone2.md
mortality/: __main__.py  clean.py  kff_merger.py  map_viz.py  merge.py  predict_model.py  regional_clean  regional_clean.py  utils.py
mortality/scrapers/: abortion_web_scraping.py  cw_web_scraping.py  data_sources.py  kff_data_sources.py  kff_web_scraping.py  web_scraping_functions.py
tests/: cleaning_tests.py  test_kff_merger.py  test_predict_model.py  test_regional_cleaning.py  test_web_scraping.py
