[project]
name = "30122-project-women-in-stem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.2.0",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "rich>=13.9.4",
    "statsmodels>=0.14.4",
]
