[project]
name = "mortality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cssselect>=1.2.0",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "rich>=13.9.4",
    "statsmodels>=0.14.4",
    "plotly-express>=0.4.1",
    "plotly>=6.0.0",
    "pyshp>=2.3.1",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "cssselect>=1.2.0",
    "dash>=2.18.2",
    "scikit-learn>=1.6.1",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
